--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "inquirer": "^7.1.0",
     "ioredis": "^4.16.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "request": "^2.88.2",
     "socket.io": "^2.3.0",
